# LocalTranslator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RTranslator.md  build.cmd  build.md  deeplx.cmd  vcpkg.json
common/: CMakeLists.txt  common.h
config/: config.yaml.temp
tests/: CMakeLists.txt  deeplx_translator_test.cpp  nllb_translator_benchmark.cpp  nllb_translator_test.cpp  translator_test.cpp
translator/: CMakeLists.txt  translator.cpp  translator.h  translator_error.h
translator/deeplx/: deeplx_translator.cpp  deeplx_translator.h
translator/nllb-api/: beam_search.cpp  beam_search.h  cache_container.cpp  cache_container.h  cache_state.cpp  language_detector.cpp  language_detector.h  model_config.yaml  model_params.h  nllb_c_api.h  nllb_languages.yaml  nllb_translator.cpp  nllb_translator.h  nllb_translator.hpp  tensor_utils.h  tokenizer.cpp  tokenizer.h
